# BuyMeMcDonalds

./: .gitignore  LICENSE  README.md  pyproject.toml  server
app/: __init__.py
app/database/: __init__.py
app/database/models/: Items.py  __init__.py  account.py
app/utils/: __init__.py  config.py  email.py  mcdonalds.py
